Fixed some bugs

--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -21,7 +21,7 @@ Modified Julian Day (MJD) is a way to express both date and time as a single num
  The first one is the \texttt{query\_csac.py}. This is a python script that was originally written to log data from atomic clock during data acquisition \ref{data_aquisition}. For some reason, it proved to be a significant challenge to implement a solution in C to configure, read and write from the atomic clock. The best solution did not even provide a reliable means of communicating with the atomic clock, even though communication with the GPS receivers, which in theory should have been exactly the same, was no problem. Once time got tight, I made the decision to drop the development of the atomic clock serial communication module written in C, and decided to use \texttt{query\_csac.py} by invoking with \texttt{popen()}. 
 
 \section{Choice of programming language}
-The atomic clock controller software was originally planned to be written in Java since this was my most fluent programming language. Java is great language, it's object oriented, it has a garbage collector and a lot of useful libraries. As development started, it quickly became apparent that some parts of the code would be performance critical and that portability really wasn't that important anyway. The platform was already decided and there was no reason to believe that it would change in the near future. As we all know, premature optimization is the root of all evil. Being reluctant to commit a deadly programming sin, i decided to look at other languages. Because performance was a concern, Python was also quickly dismissed as an option. C++ would probably have been the best choice, but having never written anything in C before made it sound more exciting and like a nice opportunity to learn something new. During the planning phase of atomic clock controller development, raspbian-2015-05-07 was the latest build. It came with GCC 4.6.3 which only had experimental support for C11(\cite{GCC11}). With C11 no longer considered an option, C99 was the obvious choice given it's attractive features like:
+The atomic clock controller software was originally planned to be written in Java since this was my most fluent programming language. Java is great language, it's object oriented, it has a garbage collector and a lot of useful libraries. As development started, it quickly became apparent that some parts of the code would be performance critical and that portability really wasn't that important anyway. The platform was already decided and there was no reason to believe that it would change in the near future. As we all know, premature optimization is the root of all evil. Being reluctant to commit a deadly programming sin, i decided to look at other languages. Because performance was a concern, Python was also quickly dismissed as an option. C++ would probably have been the best choice, but having never written anything in C before, made it sound more exciting and like a nice opportunity to learn something new. During the planning phase of atomic clock controller development, raspbian-2015-05-07 was the latest build. It came with GCC 4.6.3 which only had experimental support for C11(\cite{GCC11}). With C11 no longer considered an option, C99 was the obvious choice given it's attractive features like:
 \begin{itemize}
   \item Variable-length arrays.
   \item Single line comments.
