--- a/thesis/interfacing.tex
+++ b/thesis/interfacing.tex
@@ -45,7 +45,7 @@ Another possibility is of course to write scripts that communicates with the Sen
 	  DUMPDATA                    & DD                        & ID \& FILE                    & Dumps state of Sensor \textless ID\textgreater into a file named \textless FILE\textgreater      \\ \hline
 	  LOADDATA                    & LD                        & ID \& FILE                    & Load state stored in file called \textless FILE\textgreater into Sensor \textless ID\textgreater \\ \hline
 	  QUERYCSAC                   & QC                        & COMMAND                       & Queries the CSAC with COMMAND.                                                                 \\ \hline
-	  LOADRFDATA                  & LRFD                      & ID                            & Load reference location data into Sensor \textless ID\textgreater                               \\ \hline
+	  LOADLSFDATA                  & LLSFD                      & ID                            & Load reference location data into Sensor \textless ID\textgreater                               \\ \hline
 	  PRINTCFD                    & PFD                       & NONE                          & Prints CSAC filter data\\ \hline                                                                        
 	  \end{tabularx}
 \end{table}
