--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -103,7 +103,8 @@ texcl=false,
 % Adding the bib
 \usepackage[
     backend=biber,
-    style=numeric
+    style=numeric,
+    sorting=none
 ]{biblatex}
 \addbibresource{refs.bib}
 
