--- a/thesis/spoof_test.tex
+++ b/thesis/spoof_test.tex
@@ -14,10 +14,7 @@ In order to create an accurate clock-model of the atomic clock, it was necessary
    \label{ibd}
 \end{figure}
 
-Figure \ref{ibd} shows how the Server, Sensors and atomic clock were physically set up. In order to assure good GPS satellite geometry, the antennas were placed at the roof of Justervesenets office at Kjeller. Antenna 1 was placed at a railing about a 1 meter above the ground, antenna 2 was placed at ground level. Figure \ref{sensor_kart} shows the placement of the antennas. Antenna 1 was connected to GPS receiver 1 which in turn was connected to Sensor 1. It's the same deal with antenna 2 which was connected to GPS receiver 2 which in turn was connected to Sensor 2. The distance between the two antennas was about 35 meters. The antenna connected to Sensor 1 did not utilize the full length of it's cable. This is because it proved challenging to find a place where the antenna could be placed in stable position, yet use the full length of the cable. The Sensors and the Server were connected to LAN through a Gigabit ethernet switch. The Server was configured to log telemetry received from the atomic clock and the Clients were configured to log all NMEA data received from the GPS receivers. The GPS receiver connected to antenna South is used to supply the atomic clock with a 1 PPS signal. Because the atomic clock model needs live data over time to mature, the system was started Friday 7. October 2016 and the test was performed Monday 10. October 2016. Figure \ref{msd} is a block diagram showing how the measuring setup was physically configured. The measuring was done by a Spectracom CNT-91 frequency counter using a 10 MHz reference from Justervesenet's atomic clocks. The CNT-91 was configured to measure a continuous gap-less frequency at 1 second time intervals. Figure \ref{lab_setup_photo} is a photograph of the measuring setup. 
-
-\subsection{Raspberry Pi configuration}
-
+Figure \ref{ibd} shows how the Server, Sensors and atomic clock were physically set up. In order to assure good GPS satellite geometry, the antennas were placed at the roof of Justervesenets office at Kjeller. Antenna 1 was placed at a railing about a 1 meter above the ground, antenna 2 was placed at ground level. Figure \ref{sensor_kart} shows the placement of the antennas. Antenna 1 was connected to GPS receiver 1 which in turn was connected to Sensor 1. It's the same deal with antenna 2 which was connected to GPS receiver 2 which in turn was connected to Sensor 2. The distance between the two antennas was about 35 meters. The antenna connected to Sensor 1 did not utilize the full length of it's cable. This is because it proved challenging to find a place where the antenna could be placed in stable position, yet use the full length of the cable. The Sensors and the Server were connected to LAN through a Gigabit ethernet switch. The Server was configured to log telemetry received from the atomic clock and the Clients were configured to log all NMEA data received from the GPS receivers. The GPS receiver connected to antenna South is used to supply the atomic clock with a 1 PPS signal. Because the atomic clock model needs live data over time to mature, the system was started Friday 7. October 2016 and the test was performed Monday 10. October 2016. Figure \ref{msd} is a block diagram showing how the measuring setup was physically configured. The measuring was done by a Spectracom CNT-91 frequency counter using a 10 MHz reference from Justervesenet's atomic clocks. The CNT-91 was configured to measure a continuous gap-less frequency at 1 second time intervals. Figure \ref{lab_setup_photo} is a photograph of the measuring setup. Both Sensors were configured to use Justervesenet's internal NTP server and to use UTC instead of GMT+1.
 
 \section{Filter limits}
 Table \ref{gps_filter_table} shows the filter thresholds used during both test 1 and 2. Table \ref{clock_filter_table} shows the limits for the clock model based filters.
@@ -70,7 +67,7 @@ Prediction limit & 10        \\ \hline
 
 \section{Test 1}
 \subsection{Goal of test}
-The goal with this test was to use the atomic clock controller to detect a simulated spoofing attack. By moving the antennas, the LS filter should be triggered as the solved longitude, altitude, latitude and speed should change. See \ref{ls_filter} for more about the LS filter. The result would be observable by analyzing the log files produced by the Server and Clients and the data collected by the measuring setup.
+The goal with this test was to use the atomic clock controller to detect a simulated spoofing attack. By moving the antennas, the LS filter should be triggered as the solved longitude, altitude, latitude and speed should change. See \ref{ls_filter} for more about the location and speed filter. The result would be observable by analyzing the log files produced by the Server and Clients and the data collected by the measuring setup.
 
 \subsection{Description}\label{test1_description}
 The following is a step by step description of how the test was conducted. The time in the brackets was obtained from a wristwatch. It is written in the normal format as well as number of seconds after 10:48. This is because the data used to draw the graphs, started at 10:48 but uses seconds in the X axis. Comparison is therefore easier. It is important to note that nor the resolution or accuracy was of any notable concern when writing down the time. The time was mainly noted to make it easier to find any correlation between the steps taken and patterns found in the log files. 
@@ -96,7 +93,7 @@ The following is a step by step description of how the test was conducted. The t
    {Antenna covered in aluminium foil to simulate a jamming attack.}
 \end{wrapfigure} 
 
-Step 1 and 2 were designed to trigger the LS filter, especially the check of solved latitude, longitude and altitude but also the speed, against known values. Step 5 and 6 was also designed to trigger the LS filter, but more specifically the checking of solved speed. Step 7 and 8 was to designed to reveal what would happen during a jamming attack as it was believed that covering the antennas with aluminium foil would block all signals out.
+Step 1 and 2 were designed to trigger the location and speed filter, especially the check of solved latitude, longitude and altitude but also the speed, against known values. Step 5 and 6 was also designed to trigger the location and speed filter, but more specifically the checking of solved speed. Step 7 and 8 was to designed to reveal what would happen during a jamming attack as it was believed that covering the antennas with aluminium foil would block all signals out.
 
 \subsection{Observations}\label{test1_observations}
 \subsubsection{Sensor Server logs}
@@ -104,7 +101,7 @@ By reviewing the log produced by the Sensor Server, the following was observed:
 
 \begin{itemize}
   \item No false positives, the filters were not triggered before the test started.
-  \item The LS filter was triggered by Sensor 1 at 10:59:19 and cleared at 11:04:35.
+  \item The location and speed filter was triggered by Sensor 1 at 10:59:19 and cleared at 11:04:35.
   \begin{lstlisting}
     [10/10/16 - 10:59:17] [ ALARM ] Sensor 1 triggered LS filter!
     ...
@@ -227,7 +224,7 @@ The observations reveal what we expected. After all, when moving a GPS receivers
 The goal of the second test was to test the clock model based filters. This should make the atomic clock controller disable the atomic clock's disciplining mode, and steer the atomic clock after the clock model's predictions. We also wanted to test the LS filter again to make sure we had fixed the error in the filter's configuration from last test.
 
 \subsection{Change in setup}
-The setup in test 1 is quite similar to test 2. There is however some changes. Sensor 1 is no longer connected to the Sensor Server since the LS filter no longer was main priority. Sensor 2 did however still log data during the test as it did during test 1.
+The setup in test 1 is quite similar to test 2. There is however some changes. Sensor 1 is no longer connected to the Sensor Server since the location and speed filter no longer was main priority. Sensor 2 did however still log data during the test as it did during test 1.
 
 \subsection{Description}\label{test2_description}
 The description of test 2 is similar to test 1 (see section \ref{test1_description}). The only difference is that greater care was taken in obtaining an accurate time for the steps.
@@ -248,7 +245,7 @@ The following By reviewing the log produced by the Sensor Server, the following 
 
 \begin{itemize}
   \item No false positives, the filters were not triggered before the test started.
-  \item The LS filter was triggered by at 13:12:10 and cleared at 13:19:54
+  \item The location and speed filter was triggered by at 13:12:10 and cleared at 13:19:54
   \begin{lstlisting}
     [10/24/16 - 13:12:10] [ ALARM ] Sensor 2 triggered LS filter!
     ...
