Fixed a bunch of spelling errors

--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -126,10 +126,10 @@ The table (\ref{tab:threatcounttable}) shows the different threat models and the
 
 \newpage
 \section{Benchmark clock spoofing attack}\label{benchmark_spoofer}
-In 2012 a team from The University of Texas at Austin published a paper describing \textit{The Civil GPS Spoofer}. It was a GPS spoofer and the first of its kind. The Cilvil GPS spoofer was able to precisely align both the C/A codes and navigation data in a counterfeit signal, with those of an authentic GPS signal. The alignment capability allowed for sophisticated spoofing attacks that was hard to detect. The spoofer was implemented in software-defined radio with a digital signal processor. The user could control the fake GPS signal, specifying both navigation and timing. By tracking an acquiring GPS signals and calculating navigation data, it could produce up to 14 spoofed L1 C/A signals by performing real-time prediction of the pseudo random C/A codes. Key features of the time spoofing attack: 
+In 2012 a team from The University of Texas at Austin published a paper \cite{EVPMUGA} describing \textit{The Civil GPS Spoofer}. It was a GPS spoofer and the first of its kind. The Cilvil GPS spoofer was able to precisely align both the C/A codes and navigation data in a counterfeit signal with those of an authentic GPS signal. The alignment capability allowed for sophisticated spoofing attacks that were hard to detect. The spoofer was implemented in software-defined radio with a digital signal processor. The user could control the fake GPS signal specifying both navigation and timing. By tracking and acquiring GPS signals and calculating navigation data, it could produce up to 14 spoofed L1 C/A signals by performing real-time prediction of the pseudo random C/A codes. Key features of the time spoofing attack: 
 \begin{itemize}
   \item Seamless takeover: GPS spoofer tricks target into locking on to a replica of the authentic GPS signal, without loss of GPS lock or change in reported position. 
-  \item Once target is locked on to spoofer signal, the attacker manipulates the apparent time of the target GPS clock. 
+  \item Once the target is locked on to spoofer signal, the attacker manipulates the apparent time of the target GPS clock. 
   \item Low quality internal clocks enable aggressive manipulation of GPS clock timing, rapidly resulting in large apparent timing errors.
 \end{itemize} 
-The sophistication of this spoofing attack is in part due to it is technical complexity, but more importantly due to the demonstrated result: The attacked GPS controlled clock had no way to detect that it was being fed false GPS signals. The study was targeted to the use of timing to phasor measurement units used in the monitoring and control of power grid transmission lines. Similar aggressive manipulation of timing may potentially cause the malicious shutdown of transmission lines within a few minutes after the onset of the attack. The team tested the spoofer against a wide variety of applications using the civilian receivers, and they were always successful \cite{EVPMUGA}. When designing spoof proof GPS systems, the Civil GPS spoofer can be considered a benchmark reference threat. 
+The sophistication of this spoofing attack is in part due to it is technical complexity, but more importantly due to the demonstrated result: The attacked GPS controlled clock had no way to detect that it was being fed false GPS signals. The study was targeted to the use of timing to phasor measurement units used in the monitoring and control of power grid transmission lines. Similar aggressive manipulation of timing may potentially cause the malicious shutdown of transmission lines within a few minutes after the onset of the attack. The team tested the spoofer against a wide variety of applications using the civilian receivers, and they were always successful \cite{EVPMUGA}. When designing spoof proof GPS systems the Civil GPS spoofer can be considered as a benchmark reference threat. 
